2009-08-07  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: add new dir and autofu for it.
	* Makefile.am: add new dir
	* gapi/*: a small extension method library to add generation-related
	api to GType in 2.0. Access it with -pkg:gapi-2.0-compat to pick up
	the needed refs.
	* generator/GObjectVM.cs: generate new GType getter methods.
	* generator/ObjectGen.cs: generate new GType getter methods.
	* glib/GType.cs: change a few props to methods to make them extension
	method friendly for 2.0 compat.
	* glib/Object.cs: use new GType getter methods.
	* glib/Value.cs: use new GType getter methods.
	* gtk/Widget.custom: use new GetClassPtr method.

2009-08-07  Mike Kestner  <mkestner@novell.com>

	* generator/ObjectGen.cs: kill GType ctor generation.
	* glib/InitiallyUnowned.cs: kill obsolete GType ctor.
	* glib/Object.cs: kill obsolete GType ctor.
	* gtk/Gtk.metadata: kill disable_gtype_ctor rules.
	* gtk/Widget.cs: kill obsolete GType ctor.

2009-08-07  Mike Kestner  <mkestner@novell.com>

	* glib/Log.cs: rework the LogFunc marshaling and add SetDefaultHandler
	binding to override all domains easily. [Fixes #517857]

2009-08-07  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/glue/clipboard.c: Kill as it is not used any more.

2009-08-07  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/SelectionData.custom: Use gtk_selection_data_get_data instead
	of a glue func to access the data field.

2009-08-05  Christian Hoff  <christian_hoff@gmx.net>

	* sample/CustomcellRenderer.cs: Use GObject property registration
	instead of a CellDataFunc.

2009-08-05  Christian Hoff  <christian_hoff@gmx.net>

	* generator/InterfaceGen: Override CallByName to handle interface
	adaptors properly.	[Fixes #527478]

2009-08-01  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: lock the types hash to support threaded access and 
	type registration.  Apparently gtype access/registration is threadsafe
	in glib.  [Fixes #526229]

2009-07-30  Mike Kestner  <mkestner@novell.com>
