@@ -202,6 +202,9 @@ if test "x$enable_glade_sharp" != "xno"; then
 	AC_SUBST(GLADE_LIBS)
 fi
 
+GDK_BACKEND=`pkg-config --variable=target gtk+-2.0`
+AC_SUBST(GDK_BACKEND)
+
 AC_PATH_PROG(MDOC, mdoc, no)
 if test "x$MDOC" = "xno"; then
   enable_monodoc=no
