@@ -1,3 +1,3 @@
 <configuration>
-  <dllmap dll="libgdk-win32-2.0-0.dll" target="libgdk-x11-2.0@LIB_PREFIX@.0@LIB_SUFFIX@"/>
+  <dllmap dll="libgdk-win32-2.0-0.dll" target="libgdk-@GDK_BACKEND@-2.0@LIB_PREFIX@.0@LIB_SUFFIX@"/>
 </configuration>
