@@ -1,3 +1,10 @@
+2009-08-12  Christian Hoff  <christian_hoff@gmx.net>
+
+	* configure.in.in: Detect GDK backend.
+	* */*.dll.config.in: Link against the libs of the correct GDK backend
+	instead of using x11 on Linux/win32 on Windows.
+	Patch by Christian Hergert.	[Fixes 527840]
+
 2009-08-07  Mike Kestner  <mkestner@novell.com>
 
 	* configure.in.in: add new dir and autofu for it.
